--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Backbone.syphon",
   "version": "0.4.1",
   "dependencies": {
-    "grunt": "*",
-    "grunt-rigger": "*"
+    "grunt": "0.3",
+    "grunt-rigger": "0.3"
   }
 }
